# isomorphicdb

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  HEADER  LICENSE  README.md  Untitled Diagram.xml  action.yml  build.gradle  deny.toml  env.example  gradle.properties  gradlew  gradlew.bat  rebar.config  rustfmt.toml  settings.gradle
analysis/query_analyzer/: Cargo.toml
analysis/query_analyzer/src/: insert_tree_builder.rs  lib.rs  update_tree_builder.rs
analysis/query_analyzer/src/tests/: mod.rs
analysis/query_analyzer_old/: Cargo.toml
analysis/query_analyzer_old/src/: lib.rs
analysis/query_analyzer_old/src/tests/: insert.rs  mod.rs  update.rs
annotated_tree/: Cargo.toml
annotated_tree/src/: lib.rs
data/catalog/: Cargo.toml
data/catalog/src/: binary.rs  in_memory.rs  lib.rs  on_disk.rs
data/catalog/src/in_memory/: data_catalog.rs  mod.rs  tests.rs
data/catalog/src/sql/: in_memory.rs  on_disk.rs
data/schema_planner/: Cargo.toml
data/schema_planner/src/: lib.rs
data_definition/schema_executor/: Cargo.toml
data_definition/schema_executor/src/: lib.rs
data_manipulation/annotated_queries/: Cargo.toml
data_manipulation/annotated_queries/src/: lib.rs
data_manipulation/typed_tree/: Cargo.toml
data_manipulation/typed_tree/src/: lib.rs
data_manipulation/typed_tree/src/tests/: constants.rs  mod.rs  unary_op.rs
data_manipulation/untyped_tree/: Cargo.toml
data_manipulation/untyped_tree/src/: lib.rs
data_manipulation/untyped_tree/src/tests/: implicit_type_casting.rs  mod.rs
data_repr/scalar/: Cargo.toml
data_repr/scalar/src/: lib.rs
data_repr/scalar/src/tests/: casts.rs  mod.rs  negate.rs
deprecated/ast/: Cargo.toml
deprecated/ast/src/: lib.rs  operations.rs  predicates.rs  values.rs
deprecated/binder_deprecated/: Cargo.toml
deprecated/binder_deprecated/src/: lib.rs
deprecated/schema_executor/: Cargo.toml
deprecated/schema_executor/src/: lib.rs
expression_validator/: Cargo.toml
expression_validator/src/: lib.rs
expression_validator/src/tests/: addition.rs  constant.rs  mod.rs
expression_validator/src/tests/binary_operators/: addition.rs  mod.rs
inter_repr/typed_tree/: Cargo.toml
inter_repr/typed_tree/src/: lib.rs
inter_repr/untyped_tree/: Cargo.toml
inter_repr/untyped_tree/src/: lib.rs
inter_reprs/exec_tree/: Cargo.toml
inter_reprs/exec_tree/src/: lib.rs
inter_reprs/exec_tree/src/tests/: constants.rs  mod.rs  unary_op.rs
inter_reprs/operators/: Cargo.toml
inter_reprs/operators/src/: lib.rs
inter_reprs/typed_tree/: Cargo.toml
inter_reprs/typed_tree/src/: lib.rs
inter_reprs/typed_tree/src/tests/: constants.rs  mod.rs  unary_op.rs
inter_reprs/untyped_tree/: Cargo.toml
inter_reprs/untyped_tree/src/: lib.rs
node/: Cargo.toml
node/src/query_engine/: mod.rs
node/src/query_engine/tests/: extended_query_flow.rs  schema.rs
node_engine/: Cargo.toml
node_engine/src/: engine.rs  lib.rs  node_engine_old.rs  query_engine.rs  query_executor.rs  transaction_manager.rs  worker.rs
node_engine/src/connection/: network.rs
node_engine/src/connection/async_native_tls/: README.md  acceptor.rs  handshake.rs  tls_stream.rs
node_engine/src/connection/tests/: pg_frontend.rs
node_engine/src/query_engine/: mod.rs
node_engine/src/query_engine/tests/: delete.rs  extended_query_flow.rs  insert.rs  joins.rs  mod.rs  predicate.rs  schema.rs  simple_prepared_statement.rs  table.rs  type_constraints.rs  update.rs
node_engine/src/query_engine_old/: mod.rs
node_engine/src/query_engine_old/tests/: delete.rs  extended_query_flow.rs  insert.rs  mod.rs  predicate.rs  schema.rs  select.rs  simple_prepared_statement.rs  table.rs  type_constraints.rs  update.rs
node_engine/src/query_executor/: tests.rs
node_engine/src/query_executor/tests/: delete.rs  insert.rs  prepared_statement.rs  schema.rs  select.rs  table.rs  type_constraints.rs  update.rs
node_engine/src/session/: mod.rs  statement.rs
node_engine/src/session_old/: mod.rs  statement.rs
node_engine/src/txn_context/: mod.rs
node_engine/src/txn_context/tests/: delete.rs  insert.rs  mod.rs  schema.rs  select.rs  table.rs  type_constraints.rs  update.rs
node_engine/src/worker/: tests.rs
node_engine/src/worker/tests/: jdbc_flow.rs  parse_bind_execute.rs  statement_description.rs
postgre_sql/: Cargo.toml
postgre_sql/query_ast/: Cargo.toml
postgre_sql/query_ast/src/: lib.rs
postgre_sql/query_parser/: Cargo.toml
postgre_sql/query_parser/src/: lib.rs
postgre_sql/query_parser/src/tests/: delete.rs  extended.rs  index.rs  insert.rs  mod.rs  predicate.rs  schema.rs  select.rs  table.rs  update.rs
postgre_sql/query_response/: Cargo.toml
postgre_sql/query_response/src/: lib.rs
postgre_sql/wire_protocol/: Cargo.toml
postgre_sql/wire_protocol/src/: connection.rs  lib.rs
postgre_sql/wire_protocol/tests/: network.rs
postgres/: Cargo.toml
postgres/ast/: Cargo.toml
postgres/ast/src/: lib.rs
postgres/pg_result/: Cargo.toml
postgres/query_ast/: Cargo.toml
postgres/query_ast/src/: lib.rs
postgres/query_parser/: Cargo.toml
postgres/query_parser/src/: lib.rs
postgres/query_parser/src/tests/: delete.rs  (+10 more)
postgres/query_response/: Cargo.toml
postgres/query_response/src/: lib.rs
postgres/query_validator/: Cargo.toml
postgres/query_validator/src/: lib.rs
postgres/src/: lib.rs
postgres/wire_protocol/: Cargo.toml
postgres/wire_protocol/payload/: Cargo.toml
postgres/wire_protocol/src/: connection.rs  lib.rs
schema_planner/: Cargo.toml
schema_planner/src/: lib.rs
storage/: Cargo.toml
storage/api/: Cargo.toml
storage/api/src/: lib.rs
storage/binary/: Cargo.toml
storage/binary/src/: lib.rs  repr.rs
storage/in_memory/: Cargo.toml
storage/in_memory/src/: lib.rs
storage/persistent/: Cargo.toml
storage/persistent/src/: lib.rs
storage/src/: in_memory.rs  lib.rs  pages.rs
storage/src/tests/: in_memory.rs  persistent.rs
storage/tests/failpoints/: drop_db.rs  open_db.rs  open_tree.rs
types/: Cargo.toml
types/src/: lib.rs
types/src/tests/: type_family_comparison.rs
(+1042 files in other folders)
