[package]
name = "isomorphicdb"
version = "0.1.0"
authors = ["Alex Dukhno <alex.dukhno@icloud.com>"]
edition = "2018"

[dependencies]
node_engine = { path = "node_engine" }
storage = { path = "storage" }

simple_logger = { version = "1.10.0", default-features = false }

[workspace]
members = [
    "postgre_sql",
    "sql_engine/catalog",
    "sql_engine/definition_planner",
    "sql_engine/data_definition",
    "sql_engine/query_analyzer",
    "sql_engine/query_planner",
    "sql_engine/query_processing",
    "storage",
    "node_engine",
    "data_repr",
    "types",
    "definition",
    "inter_reprs/checked_queries",
    "inter_reprs/checked_tree",
    "inter_reprs/exec_queries",
    "inter_reprs/exec_tree",
    "inter_reprs/query_ast",
    "inter_reprs/typed_queries",
    "inter_reprs/typed_tree",
    "inter_reprs/untyped_queries",
    "inter_reprs/untyped_tree",
]
