[package]
name = "isomorphicdb"
version = "0.1.0"
authors = ["Alex Dukhno <alex.dukhno@icloud.com>"]
edition = "2018"

[dependencies]
node_engine = { path = "node_engine" }
storage = { path = "storage" }

simple_logger = { version = "1.10.0", default-features = false }

[workspace]
members = [
    "postgre_sql",
    "expression_validator",
    "sql_engine/catalog",
    "sql_engine/definition_planner",
    "sql_engine/data_definition",
    "sql_engine/data_manipulation",
    "sql_engine/query_analyzer",
    "sql_engine/query_planner",
    "sql_engine/query_processing",
    "storage",
    "node_engine",
    "data_repr",
    "types_old",
    "types",
    "definition",
    "inter_repr/operators",
    "inter_repr/untyped_tree",
    "inter_repr/typed_tree",
]
