[package]
name = "isomorphicdb"
version = "0.1.0"
authors = ["Alex Dukhno <alex.dukhno@icloud.com>"]
edition = "2018"

[dependencies]
node_engine = { path = "node_engine" }
storage = { path = "storage" }

simple_logger = { version = "1.12.0", default-features = false }

[workspace]
members = [
    "postgre_sql",
    "sql_engine/catalog",
    "sql_engine/definition_planner",
    "sql_engine/data_definition",
    "sql_engine/data_manipulation",
    "sql_engine/query_analyzer",
    "sql_engine/query_planner",
    "sql_engine/query_processing",
    "storage",
    "node_engine",
    "data_repr",
    "types",
    "definition",
]
