[package]
name = "node"
version = "0.1.0"
authors = ["Alex Dukhno <alex.dukhno@icloud.com>"]
edition = "2018"
publish = false

[lib]
name = "node"

[[bin]]
name = "database"
path = "src/bin.rs"

[dependencies]
sql_ast = { path = "../parsing/sql-ast" }
analysis_tree = { path = "../analysis/tree" }
binder = { path = "../binder" }
catalog = { path = "../catalog" }
connection = { path = "../connection" }
data_manager = { path = "../data_manager" }
data_definition = { path = "../data_definition" }
definition_operations = { path = "../definition_operations" }
description = { path = "../description" }
parser = { path = "../parsing/parser" }
pg_model = { path = "../pg_model" }
plan = { path = "../plan" }
pg_wire = "0.5.0"
schema_planner = { path = "../schema_planner" }
query_analyzer = { path = "../analysis/query_analyzer" }
query_analyzer_old = { path = "../analysis/query_analyzer_old" }
query_executor = { path = "../query_executor" }
query_planner = { path = "../query_planner" }
schema_executor = { path = "../schema_executor" }
sql_model = { path = "../sql_model" }
types = { path = "../types" }

async-executor = "1.4.0"
async-dup = "1.2.1"
async-io = "1.3.1"
blocking = "1.0.0"
bigdecimal = { version = "0.2.0", features = ["string-only"] }
futures-lite = "1.11.3"
itertools = "0.10.0"
log = "0.4.8"
simple_logger = { version = "1.10.0" }
sqlparser = { git = "https://github.com/ballista-compute/sqlparser-rs.git", branch = "main", features = ["bigdecimal"] }

[dev-dependencies]
rstest = "0.6.4"
