[package]
name = "node_engine"
version = "0.1.0"
authors = ["Alex Dukhno <alex.dukhno@icloud.com>"]
edition = "2018"
publish = false

[dependencies]
# STORAGE
storage = { path = "../storage" }
# POSTGRES
postgre_sql = { path = "../postgre_sql" }

#SQL-ENGINE
catalog = { path = "../sql_engine/catalog" }
entities = { path = "../sql_engine/entities" }
data_definition = { path = "../sql_engine/data_definition" }
data_manipulation = { path = "../sql_engine/data_manipulation" }
scalar = { path = "../sql_engine/scalar" }
definition_planner = { path = "../sql_engine/definition_planner" }
query_processing = { path = "../sql_engine/query_processing" }
query_analyzer = { path = "../sql_engine/query_analyzer" }
query_planner = { path = "../sql_engine/query_planner" }

bigdecimal = { version = "0.2.0", features = ["string-only"] }
log = "0.4.14"
rand_core = "0.6.2"
rand = "0.8.3"
native-tls = "0.2.7"

[dev-dependencies]
simple_logger = "1.10.0"
rstest = "0.7.0"
