[package]
name = "node_engine"
version = "0.1.0"
authors = ["Alex Dukhno <alex.dukhno@icloud.com>"]
edition = "2018"
publish = false

[dependencies]
# STORAGE
storage = { path = "../storage" }
# POSTGRES
postgre_sql = { path = "../postgre_sql" }

#SQL-ENGINE
catalog = { path = "../sql_engine/catalog" }
data_definition = { path = "../sql_engine/data_definition" }
data_manipulation = { path = "../sql_engine/data_manipulation" }
data_repr = { path = "../data_repr" }
definition = { path = "../definition" }
definition_planner = { path = "../sql_engine/definition_planner" }
query_processing = { path = "../sql_engine/query_processing" }
query_analyzer = { path = "../sql_engine/query_analyzer" }
query_planner = { path = "../sql_engine/query_planner" }
types_old = { path = "../types_old" }

bigdecimal = { version = "0.2.0", features = ["string-only"] }
log = "0.4"
rand_core = "0.6.2"
rand = "0.8.3"
native-tls = "0.2.7"

[dev-dependencies]
simple_logger = { version = "1.10.0", default-features = false }
rstest = "0.10.0"
