[package]
name = "postgres"
version = "0.1.0"
authors = ["Alex Dukhno <alex.dukhno@icloud.com>"]
edition = "2018"
publish = false

[dependencies]
query_response = { path = "query_response" }
query_ast = { path = "query_ast" }
query_parser = { path = "query_parser" }

pg_wire = { version = "0.8.1", features = ["async_io"] }
pg_wire_payload = "0.1.0"
