[package]
name = "postgres"
version = "0.1.0"
authors = ["Alex Dukhno <alex.dukhno@icloud.com>"]
edition = "2018"
publish = false

[dependencies]
query_response = { path = "query_response" }
query_ast = { path = "query_ast" }
query_parser = { path = "query_parser" }
wire_protocol = { path = "wire_protocol" }
wire_protocol_payload = { path = "wire_protocol/payload" }
