[package]
name = "schema_planner"
version = "0.1.0"
authors = ["Alex Dukhno <alex.dukhno@icloud.com>"]
edition = "2018"
publish = false

[dependencies]
analysis_tree = { path = "../analysis/tree" }
definition_operations = { path = "../definition_operations" }
data_manager = { path = "../data_manager" }

[dev-dependencies]
types = { path = "../types" }
