[package]
name = "storage"
version = "0.1.0"
authors = ["Alex Dukhno <alex.dukhno@icloud.com>"]
edition = "2018"

[features]
persist = ["persistent"]
in-memory = ["in_memory"]

[dependencies]
binary = { path = "binary" }
storage_api = { path = "api" }

in_memory = { path = "in_memory", optional = true }
persistent = { path = "persistent", optional = true }
