[package]
name = "storage"
version = "0.1.0"
authors = ["Alex Dukhno <alex.dukhno@icloud.com>"]
edition = "2018"
publish = false

[dependencies]
binary = { path = "../data_repr/binary" }
scalar = { path = "../data_repr/scalar" }
types = { path = "../types" }

dashmap = "4.0.2"

[dev-dependencies]
bigdecimal = { version = "0.2.0", features = ["string-only"] }
