[package]
name = "types"
version = "0.1.0"
authors = ["Alex Dukhno <alex.dukhno@icloud.com>"]
edition = "2018"
publish = false

[dependencies]
query_ast = { path = "../postgre_sql/query_ast" }
wire_protocol_payload = { path = "../postgre_sql/wire_protocol/payload" }

[dev-dependencies]
rstest = "0.10.0"
