[package]
name = "catalog"
version = "0.1.0"
authors = ["Alex Dukhno <alex.dukhno@icloud.com>"]
edition = "2018"
publish = false

[dependencies]
binary = { path = "../binary" }
data_definition_operations = { path = "../../data_definition/operations" }
data_manipulation_typed_tree = { path = "../../data_manipulation/typed_tree" }
definition = { path = "../../entities/definition" }
repr = { path = "../../entities/repr" }
types = { path = "../../entities/types" }

dashmap = "4.0.2"
log = "0.4.14"
smallvec = "1.6.1"

[dev-dependencies]
rstest = "0.6.4"
tempfile = "3.2.0"
