[package]
name = "schema_planner"
version = "0.1.0"
authors = ["Alex Dukhno <alex.dukhno@icloud.com>"]
edition = "2018"
publish = false

[dependencies]
analysis_tree = { path = "../../annotated_tree" }
definition_operations = { path = "../definition_operations" }

[dev-dependencies]
definition = { path = "../../entities/definition" }
types = { path = "../../entities/types" }
