[package]
name = "schema_planner"
version = "0.1.0"
authors = ["Alex Dukhno <alex.dukhno@icloud.com>"]
edition = "2018"
publish = false

[dependencies]
data_definition_operations = { path = "../../data_definition/operations" }
data_definition_execution_plan = { path = "../../data_definition/execution_plan" }

[dev-dependencies]
definition = { path = "../../entities/definition" }
types = { path = "../../entities/types" }
