[package]
name = "schema_executor"
version = "0.1.0"
authors = ["Alex Dukhno <alex.dukhno@icloud.com>"]
edition = "2018"
publish = false

[dependencies]
analysis_tree = { path = "../../query_analysis/tree" }
data_manager = { path = "../../deprecated/catalog_deprecated/data_manager" }
definition_operations = { path = "../definition_operations" }
