[package]
name = "data_manipulation_annotated_queries"
version = "0.1.0"
authors = ["Alex Dukhno <alex.dukhno@icloud.com>"]
edition = "2018"
publish = false

[dependencies]
data_manipulation_untyped_tree = { path = "../untyped_tree" }
definition = { path = "../../entities/definition" }
types = { path = "../../entities/types" }
