[package]
name = "data_manipulation_untyped_tree"
version = "0.1.0"
authors = ["Alex Dukhno <alex.dukhno@icloud.com>"]
edition = "2018"

[dependencies]
data_manipulation_operators = { path = "../operators" }
types = { path = "../../entities/types" }

bigdecimal = { version = "0.2.0", features = ["string-only"] }
log = "0.4.13"
