[package]
name = "scalar"
version = "0.1.0"
authors = ["Alex Dukhno <alex.dukhno@icloud.com>"]
edition = "2018"
publish = false

[dependencies]
binary = { path = "../binary" }
query_ast = { path = "../../postgre_sql/query_ast" }
types_old = { path = "../../types_old" }
wire_protocol_payload = { path = "../../postgre_sql/wire_protocol/payload" }

bigdecimal = { version = "0.2.0", features = ["string-only"] }
