[package]
name = "ast"
version = "0.1.0"
authors = ["Alex Dukhno <alex.dukhno@icloud.com>"]
edition = "2018"
publish = false

[dependencies]
meta_def = { path = "../../meta_def" }
repr = { path = "../../repr" }
types = { path = "../../types" }
sql_ast = { path = "../../query_parsing/sql-ast" }

bigdecimal = { version = "0.2.0", features = ["string-only"] }
log = "0.4.11"
