[package]
name = "binder"
version = "0.1.0"
authors = ["Alex Dukhno <alex.dukhno@icloud.com>"]
edition = "2018"
publish = false

[dependencies]
pg_wire = "0.5.0"

log = "0.4.13"
sql_ast = { path = "../../query_parsing/sql-ast" }

[dev-dependencies]
bigdecimal = { version = "0.2.0", features = ["string-only"] }
rstest = "0.6.4"
