[package]
name = "schema_executor"
version = "0.1.0"
authors = ["Alex Dukhno <alex.dukhno@icloud.com>"]
edition = "2018"
publish = false

[dependencies]
analysis_tree = { path = "../../annotated_tree" }
definition_operations = { path = "../../data/definition_operations" }

# deprecated module
data_manager = { path = "../catalog_deprecated/data_manager" }

[dev-dependencies]
definition = { path = "../../entities/definition" }
