[package]
name = "typed_tree"
version = "0.1.0"
authors = ["alex-dukhno"]
edition = "2018"
publish = false

[dependencies]
operators = { path = "../operators" }
scalar = { path = "../../data_repr/scalar" }
types = { path = "../../types" }

bigdecimal = { version = "0.2.0", features = ["string-only"] }
ordered-float = "2.1.1"

[dev-dependencies]
rstest = "0.10"
