[package]
name = "exec_tree"
version = "0.1.0"
authors = ["Alex Dukhno <alex.dukhno@icloud.com>"]
edition = "2018"

[dependencies]
query_result = { path = "../../sql_engine/data_manipulation/query_result" }
operators_old = { path = "../operators_old" }
operators = { path = "../operators" }
scalar = { path = "../../data_repr/scalar" }
types = { path = "../../types" }

bigdecimal = { version = "0.2.0", features = ["string-only"] }
