[package]
name = "typed_tree"
version = "0.1.0"
authors = ["Alex Dukhno <alex.dukhno@icloud.com>"]
edition = "2018"
publish = false

[dependencies]
operators_old = { path = "../operators_old" }
operators = { path = "../operators" }
query_result = { path = "../../sql_engine/data_manipulation/query_result" }
scalar = { path = "../../data_repr/scalar" }
types = { path = "../../types" }

bigdecimal = { version = "0.2.0", features = ["string-only"] }
ordered-float = "2.1.1"

[dev-dependencies]
rstest = "0.10.0"
