[package]
name = "untyped_tree"
version = "0.1.0"
authors = ["Alex Dukhno <alex.dukhno@icloud.com>"]
edition = "2018"
publish = false

[dependencies]
operators_old = { path = "../operators_old" }
types = { path = "../../types" }

bigdecimal = { version = "0.2.0", features = ["string-only"] }
log = "0.4.13"
