[package]
name = "query_parser"
version = "0.1.0"
authors = ["Alex Dukhno <alex.dukhno@icloud.com>"]
edition = "2018"
publish = false

[dependencies]
query_ast = { path = "../query_ast" }
query_response = { path = "../query_response" }

postgres-parser = "0.2"
log = "0.4.14"

[dev-dependencies]
rstest = "0.8.0"
